--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -12,6 +12,16 @@ jobs:
         run: python3 -m pip install tox
       - name: Run linters
         run: tox -vve lint
+  static-analysis:
+    name: Static analysis
+    runs-on: ubuntu-latest
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v2
+    - name: Install dependencies
+      run: python3 -m pip install tox
+    - name: Run static analysis
+      run: tox -vve static
   unit-test:
     name: Unit tests
     runs-on: ubuntu-latest
