--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,22 @@ copyright-check = "True"
 copyright-author = "Canonical Ltd."
 copyright-regexp = "Copyright\\s\\d{4}([-,]\\d{4})*\\s+%(author)s"
 
+# Static analysis tools configuration
+[tool.mypy]
+pretty = true
+python_version = 3.8
+warn_redundant_casts = true
+warn_unused_ignores = true
+warn_no_return = true
+warn_return_any = true
+warn_unreachable = true
+warn_unused_configs = true
+show_traceback = true
+show_error_codes = true
+namespace_packages = true
+explicit_package_bases = true
+check_untyped_defs = true
+
 [tool.pytest.ini_options]
 minversion = "6.0"
 log_cli_level = "INFO"
