--- a/tox.ini
+++ b/tox.ini
@@ -52,6 +52,19 @@ commands =
     isort --check-only --diff {[vars]all_path}
     black --check --diff {[vars]all_path}
 
+[testenv:static]
+description = Run static analysis checks
+deps =
+    -r{toxinidir}/requirements.txt
+    mypy
+    types-PyYAML
+    pytest
+    pytest-operator
+    types-setuptools
+    types-toml
+commands =
+    mypy {[vars]lib_path} {posargs}
+
 [testenv:unit]
 description = Run unit tests
 deps =
